--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,10 @@
 			<version>7.4.0</version>
 			<scope>test</scope>
 		</dependency>
-
+		<dependency>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
+			<version>1.2.17</version> <!-- Specify the desired version -->
+		</dependency>
 	</dependencies>
 </project>
